# flystar

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst  requirements.txt
docs/examples/flystar_mosaic_to_gaia/: mag16jul14_ob150029_kp_rms_named.lis  mag17jul14_ob150029_kp_rms_named.lis  mag18aug21_ob150029_kp_rms_named.lis
docs/flystar/: index.rst
docs/flystar/examples/flystar_mosaic_to_gaia/: mag15jul23_ob150029_kp_rms_named.lis  mag16may24_ob150029_kp_rms_named.lis  mag17jul19_ob150029_kp_rms_named.lis  mag17may21_ob150029_kp_rms_named.lis  ob150029_label.txt
docs/source/: conf.py  index.rst
docs/source/examples/flystar_mosaic_to_gaia/: mag15jun07_ob150029_kp_rms_named.lis  mag19apr17_ob150029_kp_rms_named.lis
flystar/: __init__.py  align.py  align_old_functions.py  analysis.py  archive_io.py  conftest.py  examples.py  fit_velocity.py  match.py  motion_model.py  parallax.py  plots.py  random_vel_0.fits  random_vel_1.fits  random_vel_2.fits  random_vel_3.fits  random_vel_ref.fits  starlists.py  startables.py  stitch_method2.py  template.py  transforms.py  version.py
flystar/tests/: A.lis  B.lis  C.lis  D.lis  E.lis  F.lis  ref.lis  ref_vel.lis  test_align.ipynb  test_align.py  test_match.py  test_motion_model.py  test_starlist.py  test_startable.py  test_stitch_method2.py  test_transforms.py
flystar/tests/mb10364_data/: 2011_10_31_F606W_MATCHUP_XYMEEE_final.calib  2012_09_25_F606W_MATCHUP_XYMEEE_final.calib  2013_10_24_F606W_MATCHUP_XYMEEE_final.calib  my_gaia.fits
licenses/: LICENSE.rst
