[project]
name = "flystar"
description = "FlyStar Astromeric Analysis Package"
readme = "README.rst"
authors = [{name="Jessica Lu", email="jlu.astro@berkeley.edu"},
           {name="Matt Hosek", email="mwhosek@astro.ucla.edu"}]
license = {text="BSD 3-Clause License"}
dependencies = ["numpy", "astropy>=3.2"]
#dynamic = ["version"]
version = "0.1"

[project.urls]
homepage = "https://github.com/MovingUniverseLab/flystar"

[build-system]
requires = ["setuptools",
            "setuptools_scm",
            "wheel",
            "extension-helpers",
            "oldest-supported-numpy",
            "cython==0.29.14"]

build-backend = 'setuptools.build_meta'
